--- a/c19firebase-firestore/pubspec.yaml
+++ b/c19firebase-firestore/pubspec.yaml
@@ -13,6 +13,11 @@ dependencies:
 
   cupertino_icons: 1.0.3
   intl: 0.17.0
+  firebase_core: ^1.8.0
+  cloud_firestore: ^2.5.4
+  provider: ^6.0.1
+  firebase_auth: ^3.1.4
+
 
 dev_dependencies:
   flutter_test:
